k8s/UAT/master.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: octava-master
  namespace: uat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
  - hosts:
    - octavauat.edmonton.ca
    secretName: production-tls
  rules:
  - host: octavauat.edmonton.ca
