k8s/UAT/webapi.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: octava-webapi
  namespace: uat
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: octavauat.edmonton.ca
    http:
      paths:
      - path: /plugins/initiatives
        backend:
          serviceName: initiatives-webapi
          servicePort: 5000
